Replace with Grashjs/cmms v1.2.0 source