@@ -13,7 +13,7 @@ import com.grash.repository.WorkOrderAudRepository;
 import com.grash.security.CurrentUser;
 import com.grash.service.*;
 import com.grash.utils.Helper;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.annotations.Api;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.PageRequest;
@@ -22,8 +22,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import io.swagger.v3.oas.annotations.Parameter;
+import springfox.documentation.annotations.ApiIgnore;
 
+import javax.servlet.http.HttpServletRequest;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -35,7 +36,7 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/analytics/work-orders")
-@Tag(name = "Work Order Analytics", description = "Analytics operations on work orders")
+@Api(tags = "WorkOrderAnalytics")
 @RequiredArgsConstructor
 public class WOAnalyticsController {
 
@@ -45,28 +46,23 @@ public class WOAnalyticsController {
     private final LaborService laborService;
     private final WorkOrderCategoryService workOrderCategoryService;
     private final AssetService assetService;
-    private final CompanyService companyService;
 
     @PostMapping("/complete/overview")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getCompleteStats",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOStats> getCompleteStats(@Parameter(hidden = true) @CurrentUser User user,
-                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
-                                                    @RequestParam(required = false) @Parameter(description = "Filter " +
-                                                            "by specific company") Long companyId) {
+    public ResponseEntity<WOStats> getCompleteStats(@ApiIgnore @CurrentUser OwnUser user,
+                                                    @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> completedWO =
-                    workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                    workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
             Collection<WorkOrder> withFirstTimeToReactWO =
-                    workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).toList();
+                    workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).collect(Collectors.toList());
             int total = workOrders.size();
             int complete = completedWO.size();
             int compliant = (int) completedWO.stream().filter(WorkOrder::isCompliant).count();
@@ -83,9 +79,8 @@ public class WOAnalyticsController {
 
     @GetMapping("/mobile/overview")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<MobileWOStats> getMobileOverview(@Parameter(hidden = true) @CurrentUser User user,
-                                                           @Parameter(description = "Filter work orders assigned to " +
-                                                                   "current user") @RequestParam("assignedToMe") boolean assignedToMe) {
+    public ResponseEntity<MobileWOStats> getMobileOverview(@ApiIgnore @CurrentUser OwnUser user,
+                                                           @RequestParam("assignedToMe") boolean assignedToMe) {
         Collection<WorkOrder> result;
         Collection<WorkOrder> workOrders;
         Collection<WorkOrder> completeWorkOrders;
@@ -95,9 +90,9 @@ public class WOAnalyticsController {
             result = workOrderService.findByCompany(user.getCompany().getId());
         }
         workOrders =
-                result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
         completeWorkOrders =
-                result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
         int open = (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.OPEN)).count();
         int onHold =
@@ -124,20 +119,20 @@ public class WOAnalyticsController {
 
     @GetMapping("/mobile/complete-compliant")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<MobileWOStatsExtended> getMobileExtendedStats(@Parameter(hidden = true) @CurrentUser User user) {
+    public ResponseEntity<MobileWOStatsExtended> getMobileExtendedStats(@ApiIgnore @CurrentUser OwnUser user) {
         Date weekStart = Helper.localDateToDate(LocalDate.now().minusDays(7));
         Collection<WorkOrder> workOrders = workOrderService.findByCompany(user.getCompany().getId());
         Collection<WorkOrder> completeWO =
-                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
         Collection<WorkOrder> compliantWO =
-                completeWO.stream().filter(WorkOrder::isCompliant).toList();
+                completeWO.stream().filter(WorkOrder::isCompliant).collect(Collectors.toList());
         Collection<WorkOrder> completeWOWeek =
-                completeWO.stream().filter(workOrder -> workOrder.getCompletedOn() != null && workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).toList();
+                completeWO.stream().filter(workOrder -> workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).collect(Collectors.toList());
         Collection<WorkOrder> compliantWOWeek = compliantWO.stream().filter(workOrder -> {
             if (workOrder.getCompletedOn() == null) {
                 return true;
             } else return workOrder.getCompletedOn().after(weekStart);
-        }).toList();
+        }).collect(Collectors.toList());
         return ResponseEntity.ok(MobileWOStatsExtended.builder()
                 .complete(completeWO.size())
                 .completeWeek(completeWOWeek.size())
@@ -151,23 +146,19 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteStats",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOIncompleteStats> getIncompleteStats(@Parameter(hidden = true) @CurrentUser User user,
-                                                                @Parameter(description = "Date range for filtering " +
-                                                                        "analytics") @RequestBody DateRange dateRange,
-                                                                @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<WOIncompleteStats> getIncompleteStats(@ApiIgnore @CurrentUser OwnUser user,
+                                                                @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
             int total = incompleteWO.size();
             List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getRealCreatedAt(),
-                    new Date(), TimeUnit.DAYS)).toList();
+                    new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
             int averageAge = ages.size() == 0 ? 0 : ages.stream().mapToInt(Long::intValue).sum() / ages.size();
             return ResponseEntity.ok(WOIncompleteStats.builder()
                     .total(total)
@@ -180,20 +171,16 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByPriority",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOStatsByPriority> getIncompleteByPriority(@Parameter(hidden = true) @CurrentUser User user,
-                                                                     @Parameter(description = "Date range for " +
-                                                                             "filtering analytics") @RequestBody DateRange dateRange,
-                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<WOStatsByPriority> getIncompleteByPriority(@ApiIgnore @CurrentUser OwnUser user,
+                                                                     @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
             Pair<Integer, Double> highValues = getCountsAndEstimatedDurationByPriority(Priority.HIGH, incompleteWO);
             Pair<Integer, Double> noneValues = getCountsAndEstimatedDurationByPriority(Priority.NONE, incompleteWO);
@@ -235,20 +222,16 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOStatuses",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOStatuses> getWOStatuses(@Parameter(hidden = true) @CurrentUser User user,
-                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
-                                                    @RequestParam(required = false) @Parameter(description = "Filter " +
-                                                            "by specific company") Long companyId) {
+    public ResponseEntity<WOStatuses> getWOStatuses(@ApiIgnore @CurrentUser OwnUser user,
+                                                    @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
             return ResponseEntity.ok(WOStatuses.builder()
                     .open(getWOCountsByStatus(Status.OPEN, incompleteWO))
@@ -263,25 +246,28 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByAsset",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Collection<IncompleteWOByAsset>> getIncompleteByAsset(@Parameter(hidden = true) @CurrentUser User user,
-                                                                                @Parameter(description = "Date range " +
-                                                                                        "for filtering analytics") @RequestBody DateRange dateRange,
-                                                                                @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Collection<IncompleteWOByAsset>> getIncompleteByAsset(@ApiIgnore @CurrentUser OwnUser user,
+                                                                                @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
-            List<Object[]> rows = workOrderService.findTopNAssetsByIncompleteWO(
-                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd(), 10);
-            Collection<IncompleteWOByAsset> result = rows.stream()
-                    .map(row -> IncompleteWOByAsset.builder()
-                            .id((Long) row[0])
-                            .name((String) row[1])
-                            .count(((Number) row[2]).intValue())
-                            .averageAge(((Number) row[3]).longValue())
-                            .build())
-                    .collect(Collectors.toList());
+            Collection<Asset> assets = assetService.findByCompanyAndBefore(user.getCompany().getId(),
+                    dateRange.getEnd());
+            Collection<IncompleteWOByAsset> result = new ArrayList<>();
+            assets.forEach(asset -> {
+                Collection<WorkOrder> incompleteWO = workOrderService.findByAssetAndCreatedAtBetween(asset.getId(),
+                                dateRange.getStart(), dateRange.getEnd())
+                        .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(),
+                        new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+                int count = incompleteWO.size();
+                result.add(IncompleteWOByAsset.builder()
+                        .count(count)
+                        .averageAge(count == 0 ? 0 : ages.stream().mapToLong(value -> value).sum() / count)
+                        .name(asset.getName())
+                        .id(asset.getId())
+                        .build());
+            });
             return ResponseEntity.ok(result);
         } else throw new CustomException("Access Denied", HttpStatus.FORBIDDEN);
     }
@@ -290,24 +276,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByUser",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Collection<IncompleteWOByUser>> getIncompleteByUser(@Parameter(hidden = true) @CurrentUser User user,
-                                                                              @Parameter(description = "Date range " +
-                                                                                      "for filtering analytics") @RequestBody DateRange dateRange,
-                                                                              @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Collection<IncompleteWOByUser>> getIncompleteByUser(@ApiIgnore @CurrentUser OwnUser user,
+                                                                              @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
-            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
+            Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<IncompleteWOByUser> result = new ArrayList<>();
             users.forEach(user1 -> {
                 Collection<WorkOrder> incompleteWO =
                         workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(), dateRange.getStart(),
                                         dateRange.getEnd())
-                                .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                                .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(),
-                        new Date(), TimeUnit.DAYS)).toList();
+                        new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
                 int count = incompleteWO.size();
                 result.add(IncompleteWOByUser.builder()
                         .count(count)
@@ -325,17 +307,12 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOHours",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOHours> getHours(@Parameter(hidden = true) @CurrentUser User user,
-                                            @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
-                                            @RequestParam(required = false) @Parameter(description = "Filter by " +
-                                                    "specific company") Long companyId) {
+    public ResponseEntity<WOHours> getHours(@ApiIgnore @CurrentUser OwnUser user, @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
                             , dateRange.getEnd());
             double estimated =
                     workOrders.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
@@ -353,16 +330,12 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByUser",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Collection<WOCountByUser>> getCountsByUser(@Parameter(hidden = true) @CurrentUser User user,
-                                                                     @Parameter(description = "Date range for " +
-                                                                             "filtering analytics") @RequestBody DateRange dateRange,
-                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Collection<WOCountByUser>> getCountsByUser(@ApiIgnore @CurrentUser OwnUser user,
+                                                                     @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
-            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
+            Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
                 int count = (int) workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(),
@@ -383,16 +356,12 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByCompletedBy",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Collection<WOCountByUser>> getCountsByCompletedBy(@Parameter(hidden = true) @CurrentUser User user,
-                                                                            @Parameter(description = "Date range for " +
-                                                                                    "filtering analytics") @RequestBody DateRange dateRange,
-                                                                            @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Collection<WOCountByUser>> getCountsByCompletedBy(@ApiIgnore @CurrentUser OwnUser user,
+                                                                            @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
-            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
+            Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
                 int count = (int) workOrderService.findByCompletedByAndCreatedAtBetween(user1.getId(),
@@ -413,20 +382,16 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByPriority",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Map<Priority, Integer>> getCountsByPriority(@Parameter(hidden = true) @CurrentUser User user,
-                                                                      @Parameter(description = "Date range for " +
-                                                                              "filtering analytics") @RequestBody DateRange dateRange,
-                                                                      @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Map<Priority, Integer>> getCountsByPriority(@ApiIgnore @CurrentUser OwnUser user,
+                                                                      @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Priority[] priorities = Priority.values();
             Map<Priority, Integer> results = new HashMap<>();
             Arrays.asList(priorities).forEach(priority -> {
                 int count = (int) workOrderService.findByPriorityAndCompanyAndCreatedAtBetween(priority,
-                                resolvedCompanyId, dateRange.getStart(), dateRange.getEnd()).stream()
+                                user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.put(priority, count);
             });
@@ -438,20 +403,13 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByCategory",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<Collection<WOCountByCategory>> getCountsByCategory(@Parameter(hidden = true) @CurrentUser User user,
-                                                                             @Parameter(description = "Date range for" +
-                                                                                     " filtering analytics") @RequestBody DateRange dateRange,
-                                                                             @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<Collection<WOCountByCategory>> getCountsByCategory(@ApiIgnore @CurrentUser OwnUser user,
+                                                                             @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrderCategory> categories =
-                    workOrderCategoryService.findByCompanySettings(
-                            companyService.findById(resolvedCompanyId)
-                                    .orElseThrow(() -> new CustomException("Company not found", HttpStatus.NOT_FOUND))
-                                    .getCompanySettings().getId());
+                    workOrderCategoryService.findByCompanySettings(user.getCompany().getCompanySettings().getId());
             Collection<WOCountByCategory> results = new ArrayList<>();
             categories.forEach(category -> {
                 int count = (int) workOrderService.findByCategoryAndCreatedAtBetween(category.getId(),
@@ -471,20 +429,18 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteByWeek",
-            key = "#user.id + (#companyId != null ? '_' + #companyId : '')"
+            key = "#user.id"
     )
-    public ResponseEntity<List<WOCountByWeek>> getCompleteByWeek(@Parameter(hidden = true) @CurrentUser User user,
-                                                                 @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<List<WOCountByWeek>> getCompleteByWeek(@ApiIgnore @CurrentUser OwnUser user) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOCountByWeek> result = new ArrayList<>();
             LocalDate previousMonday =
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
                 Collection<WorkOrder> completeWorkOrders =
-                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), resolvedCompanyId)
-                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 int compliant = (int) completeWorkOrders.stream().filter(WorkOrder::isCompliant).count();
                 int reactive = (int) completeWorkOrders.stream().filter(WorkOrder::isReactive).count();
                 result.add(WOCountByWeek.builder()
@@ -503,22 +459,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteTimeByWeek",
-            key = "#user.id + (#companyId != null ? '_' + #companyId : '')"
+            key = "#user.id"
     )
-    public ResponseEntity<List<WOTimeByWeek>> getCompleteTimeByWeek(@Parameter(hidden = true) @CurrentUser User user,
-                                                                    @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<List<WOTimeByWeek>> getCompleteTimeByWeek(@ApiIgnore @CurrentUser OwnUser user) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOTimeByWeek> result = new ArrayList<>();
             LocalDate previousMonday =
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
                 Collection<WorkOrder> completeWorkOrders =
-                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), resolvedCompanyId)
-                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 Collection<WorkOrder> reactiveWorkOrders =
-                        completeWorkOrders.stream().filter(WorkOrder::isReactive).toList();
+                        completeWorkOrders.stream().filter(WorkOrder::isReactive).collect(Collectors.toList());
 
                 long total = getTime(completeWorkOrders);
                 long reactive = getTime(reactiveWorkOrders);
@@ -537,17 +491,13 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteCostsAndTime",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<WOCostsAndTime> getCompleteCostsAndTime(@Parameter(hidden = true) @CurrentUser User user,
-                                                                  @Parameter(description = "Date range for filtering " +
-                                                                          "analytics") @RequestBody DateRange dateRange,
-                                                                  @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<WOCostsAndTime> getCompleteCostsAndTime(@ApiIgnore @CurrentUser OwnUser user,
+                                                                  @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompanyAndCreatedAtBetween(
-                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd()).stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
+                    user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
             double additionalCost = workOrderService.getAdditionalCost(completeWorkOrders);
             long laborCost = workOrderService.getLaborCostAndTime(completeWorkOrders).getFirst();
             long laborTime = workOrderService.getLaborCostAndTime(completeWorkOrders).getSecond();
@@ -569,49 +519,33 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteCostsByDate",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<List<WOCostsByDate>> getCompleteCostsByDate(@Parameter(hidden = true) @CurrentUser User user,
-                                                                      @Parameter(description = "Date range for " +
-                                                                              "filtering analytics") @RequestBody DateRange dateRange,
-                                                                      @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<List<WOCostsByDate>> getCompleteCostsByDate(@ApiIgnore @CurrentUser OwnUser user,
+                                                                      @RequestBody DateRange dateRange) {
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
-            List<Object[]> rows = workOrderService.findWOCostsByDateRange(
-                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd());
-
             LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
             List<WOCostsByDate> result = new ArrayList<>();
             LocalDate currentDate = Helper.dateToLocalDate(dateRange.getStart());
-            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1);
+            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date
+            // in the range
             long totalDaysInRange = ChronoUnit.DAYS.between(Helper.dateToLocalDate(dateRange.getStart()),
                     endDateExclusive);
             int points = Math.toIntExact(Math.min(15, totalDaysInRange));
-            int rowIndex = 0;
 
             for (int i = 0; i < points; i++) {
-                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points);
-                nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate;
-                Date segmentEnd = Helper.localDateToDate(nextDate);
-
-                double laborCost = 0, partCost = 0, additionalCost = 0;
-                while (rowIndex < rows.size()) {
-                    Object[] row = rows.get(rowIndex);
-                    Date completedOn = (Date) row[1];
-                    if (completedOn.after(segmentEnd)) break;
-                    laborCost += ((Number) row[2]).doubleValue();
-                    partCost += ((Number) row[3]).doubleValue();
-                    additionalCost += ((Number) row[4]).doubleValue();
-                    rowIndex++;
-                }
-
+                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points); // Distribute evenly over the
+                // range
+                nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate; // Adjust for the end date
+                Collection<WorkOrder> completeWorkOrders =
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(currentDate),
+                                        Helper.localDateToDate(nextDate), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 result.add(WOCostsByDate.builder()
-                        .additionalCost(additionalCost)
-                        .laborCost(laborCost)
-                        .partCost(partCost)
-                        .date(Helper.localDateToDate(currentDate))
-                        .build());
+                        .additionalCost(workOrderService.getAdditionalCost(completeWorkOrders))
+                        .laborCost(workOrderService.getLaborCostAndTime(completeWorkOrders).getFirst())
+                        .partCost(workOrderService.getPartCost(completeWorkOrders))
+                        .date(Helper.localDateToDate(currentDate)).build());
                 currentDate = nextDate;
             }
             return ResponseEntity.ok(result);
@@ -622,17 +556,12 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOStatusesByDate",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
-                    "(#companyId != null ? '_' + #companyId : '')"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
     )
-    public ResponseEntity<List<WOStatusesByDate>> getReceivedAndResolvedForDateRange(@Parameter(hidden = true) @CurrentUser User user,
-                                                                                     @Parameter(description = "Date " +
-                                                                                             "range for filtering " +
-                                                                                             "analytics") @RequestBody DateRange dateRange,
-                                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
+    public ResponseEntity<List<WOStatusesByDate>> getReceivedAndResolvedForDateRange(@ApiIgnore @CurrentUser OwnUser user,
+                                                                                     @RequestBody DateRange dateRange) {
         LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
         if (user.canSeeAnalytics()) {
-            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOStatusesByDate> result = new ArrayList<>();
             LocalDate currentDate = Helper.dateToLocalDate(dateRange.getStart());
             LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date
@@ -646,7 +575,7 @@ public class WOAnalyticsController {
                 // range
                 nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate; // Adjust for the end date
                 Collection<WorkOrder> workOrders =
-                        workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId,
+                        workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(),
                                 dateRange.getStart(), Helper.localDateToDate(nextDate));
                 LocalDate finalNextDate = nextDate;
                 Collection<Status> statuses = workOrders.stream().map(workOrder -> {
@@ -654,7 +583,7 @@ public class WOAnalyticsController {
                             Helper.localDateToDate(finalNextDate).getTime(), PageRequest.of(0, 1));
                     if (workOrderAuds.isEmpty()) return workOrder.getStatus();
                     else return workOrderAuds.get(0).getStatus();
-                }).filter(Objects::nonNull).toList();
+                }).filter(Objects::nonNull).collect(Collectors.toList());
 
                 result.add(WOStatusesByDate.builder()
                         .open((int) statuses.stream().filter(status -> status.equals(Status.OPEN)).count())
@@ -672,7 +601,7 @@ public class WOAnalyticsController {
     private Pair<Integer, Double> getCountsAndEstimatedDurationByPriority(Priority priority,
                                                                           Collection<WorkOrder> workOrders) {
         Collection<WorkOrder> priorityWO =
-                workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).toList();
+                workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).collect(Collectors.toList());
         int priorityCounts = priorityWO.size();
         double priorityEstimatedDurations =
                 priorityWO.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
@@ -681,7 +610,7 @@ public class WOAnalyticsController {
 
     private int getWOCountsByStatus(Status status, Collection<WorkOrder> workOrders) {
         Collection<WorkOrder> statusWO =
-                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).toList();
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).collect(Collectors.toList());
         return statusWO.size();
     }
 
@@ -692,6 +621,4 @@ public class WOAnalyticsController {
         });
         return labors.stream().mapToLong(Time::getDuration).sum();
     }
-
 }
-
